# bareos

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt
core/: CMakeLists.txt
core/cmake/: BareosConfigureFile.cmake  BareosFindAllLibraries.cmake  BareosFindPrograms.cmake  BareosInstallConfigFiles.cmake  install-univention-extra-configuration.cmake
core/scripts/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/cats/: CMakeLists.txt
core/src/console/: CMakeLists.txt
core/src/dird/: CMakeLists.txt  dir_plugins.cc  dir_plugins.h  inc_conf.cc  ndmp_dma_storage.cc  ndmp_fhdb_lmdb.cc  ua_prune.cc  ua_purge.cc  ua_status.cc
core/src/dird/dbcopy/: column_description.cc  database_export_postgresql.cc  database_import_mysql.cc  dbcopy.cc  row_data.h
core/src/filed/: CMakeLists.txt  accurate.h  fd_plugins.cc  fd_plugins.h
core/src/findlib/: bfile.cc
core/src/include/: baconfig.h  hostconfig.h  jcr.h
core/src/lib/: CMakeLists.txt  plugins.cc  plugins.h
core/src/plugins/dird/: CMakeLists.txt  example-plugin-dir.cc  python-dir.cc  python-dir.h
core/src/plugins/filed/: BareosFdPluginBaseclass.py  BareosFdPluginLibcloud.py  BareosFdPluginOvirt.py  CMakeLists.txt  bpipe-fd.cc  cephfs-fd.cc  example-plugin-fd.cc  gfapi-fd.cc  python-fd.cc  python-fd.h  rados-fd.cc  test-deltaseq-fd.cc  test-plugin-fd.cc
core/src/plugins/stored/: CMakeLists.txt  autoxflate-sd.cc  example-plugin-sd.cc  python-sd.cc  python-sd.h  scsicrypto-sd.cc  scsitapealert-sd.cc
core/src/qt-tray-monitor/: CMakeLists.txt
core/src/stored/: CMakeLists.txt  butil.cc  dev.cc  dev.h  dir_cmd.cc  reserve.cc  sd_backends.cc  sd_plugins.cc  sd_plugins.h  stored.cc
core/src/stored/backends/: chunked_device.cc  droplet_device.cc
core/src/tests/: catalog.cc  run_on_incoming_connect_interval.cc
core/src/tools/: bpluginfo.cc
core/src/win32/compat/: compat.cc
docs/manuals/source/: conf.py
docs/manuals/source/DeveloperGuide/: BuildAndTestBareos.rst  generaldevel.rst  pluginAPI.rst  regression.rst
docs/manuals/source/TasksAndConcepts/: AutomatedDiskBackup.rst  Plugins.rst  UsingTapeDrivesWithoutAutochanger.rst
docs/manuals/source/man/: bareos-dbcopy.rst
python-bareos/bareos/: exceptions.py
python-bareos/bareos/bsock/: lowlevel.py
systemtests/: CMakeLists.txt  environment.in
systemtests/tests/dbcopy-mysql-postgresql-test/: testrunner
systemtests/tests/python-fd-ovirt-plugin-test/: testrunner
systemtests/tests/python-fd-plugin-libcloud-test/: testrunner
systemtests/tests/volume-pruning-test/: testrunner
webui/: CMakeLists.txt
webui/public/js/: bootstrap-table-formatter.js
(+16 files in other folders)
